<resources>
    <string name="app_name">秤心助手</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string name="no_net">无网络连接</string>
    <string name="resp_json_format_error">返回数据解析有误！</string>
    <string name="no_respnose">网络繁忙:)</string>

    <string name="phone_error">手机号码输入有误！</string>
    <string name="phone_not_empty">手机号码不能为空！</string>
    <string name="password_not_empty">密码不能为空！</string>
    <string name="confirm_pwd_not_same">两次输入密码不一致！</string>
    <string name="verify_not_empty">验证码不能为空！</string>
    <string name="album">相册</string>
    <string name="photogragh">拍照</string>


    <string name="regist">注册</string>

    <string name="login_title_admin">店主登录</string>
    <string name="input_verify_code">请输入短信验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_user_name">用户名/手机号</string>
    <string name="login">登录</string>


    <!--浮动数字键盘-->
    <string name="digitKeyppad_one">1</string>
    <string name="digitKeyppad_two">2</string>
    <string name="digitKeyppad_three">3</string>
    <string name="digitKeyppad_four">4</string>
    <string name="digitKeyppad_five">5</string>
    <string name="digitKeyppad_six">6</string>
    <string name="digitKeyppad_seven">7</string>
    <string name="digitKeyppad_eight">8</string>
    <string name="digitKeyppad_nine">9</string>
    <string name="digitKeyppad_zero">0</string>
    <string name="digitKeyppad_point">.</string>
    <string name="digitKeyppad_delete"><![CDATA[<<]]></string>
    <string name="digitKeyppad_ok">确定</string>


    <!--高德地图所需-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="resolver_error">解析出错</string>

</resources>
