<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <include layout="@layout/include_toolbar"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_logo"
                    app:civ_border_color="@android:color/holo_blue_bright"
                    app:civ_border_width="1dp"
                    />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_user_name"
                android:textColorHint="@color/txt_input"
                >

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:inputType="number"
                    android:textColor="@color/txt_input"
                    android:textSize="18sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:textColorHint="@color/txt_input"
                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPassword"
                    android:textColor="@color/txt_input"
                    android:textSize="18sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/input_verify_code"
                    android:orientation="horizontal"
                    android:textColorHint="@color/txt_input"
                    >

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/txt_input"
                        android:textSize="18sp"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_btn_enable"
                    android:text="获取验证码"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_use_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="忘记密码？"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    />

                <Button
                    android:id="@+id/btn_use_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:background="#00000000"
                    android:padding="3dp"
                    android:text="短信登录吧！"
                    android:textColor="@color/short_msg"
                    android:textSize="12sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_use_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btn_use_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="right"
                    android:background="#00000000"
                    android:padding="3dp"
                    android:text="密码登录"
                    android:textColor="@color/short_msg"
                    android:textSize="12sp"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="48dip"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/sel_btn_login"
                    android:text="登录"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/transparent"
                android:text="@string/regist"
                android:textColor="@color/txt_input"
                android:textSize="20sp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

